--- a/app/css/mediaqueries.css
+++ b/app/css/mediaqueries.css
@@ -2,13 +2,12 @@
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   /* Styles */
- 
   h1.namaste {
     font-size: 72px;
   }
-   h1.hero{
-     font-size: 160px;
-   }
+  h1.hero {
+    font-size: 160px;
+  }
   h2.hero {
     font-size: 60px;
   }
@@ -22,7 +21,7 @@
     margin-bottom: 90px;
   }
   .site-block {
-    padding:0 40px ;
+    padding: 0 40px;
   }
   .page-hero h4 {
     font-size: 24px;
@@ -33,47 +32,203 @@
   h3.light {
     font-size: 24px;
   }
-  h3.blockheader{
+  h3.blockheader {
     font-size: 24px;
-    
-}
-
-.m-t-8{
-  margin-top:40px;
-}
-h3.blockheader::before { 
-    width:30px;
-    height:18px;
-
-}
-.skill-icons{
-   text-align: left;
-}
-.skill-icons img{
-  height: 30px;
- 
-}
-.bigsquare.left{
-    
-    left:-700px;
-    top:-300px;
-        
-}
-.red-item__showcase img{
-  
-}
-.red-item__showcase img:first-child{
-    left:-30vw;
+  }
+  .m-t-8 {
+    margin-top: 40px;
+  }
+  h3.blockheader::before {
+    width: 30px;
+    height: 18px;
+  }
+  .skill-icons {
+    text-align: left;
+  }
+  .skill-icons img {
+    height: 30px;
+  }
+  .bigsquare.left {
+    left: -700px;
+    top: -300px;
+  }
+  .red-item__showcase img {}
+  .red-item__showcase img:first-child {
+    left: -30vw;
     opacity: 1;
     height: 200px;
-}
-.red-item__showcase img:nth-child(2){
+  }
+  .red-item__showcase img:nth-child(2) {
     z-index: 5;
     height: 300px;
-}
-.red-item__showcase img:last-child{
-    right:-30vw;
+  }
+  .red-item__showcase img:last-child {
+    right: -30vw;
     opacity: 1;
     height: 200px;
+  }
 }
+@media only screen and (max-width: 767px) {
+  /* Styles */
+  h1.namaste {
+     font-size: 30px;
+  }
+  h1.hero {
+    font-size: 80px;
+    line-height:80px;
+    margin-left:0;
+    height:80px;
+    margin-bottom:0;
+  }
+  h2.hero {
+    font-size: 30px;
+  }
+  h1.lighthero {
+     font-size: 60px;
+    margin-top:0;
+  }
+
+  .separator{
+    height: 0;
+    display: none;
+  }
+  .profile-pic:not(:nth-child(3)) {
+    display: none;
+  }
+  section.site-block {
+    margin-bottom: 45px;
+  }
+  .site-block {
+    padding: 0 0px;
+  }
+  .page-hero h4 {
+    font-size: 18px;
+  }
+  h2.light {
+    font-size:30px;
+    margin-top:30px;
+  }
+  h3.light {
+    font-size: 18px;
+  }
+  h3.blockheader {
+    font-size: 18px;
+    margin-bottom:30px;
+  }
+  .m-t-8 {
+    margin-top: 40px;
+  }
+  .m-t-6{
+    margin-top:30px;
+  }
+  .m-b-3{
+    margin-bottom:15px;
+  }
+  h3.blockheader::before {
+    width: 30px;
+    height: 18px;
+  }
+  .skill-icons {
+    text-align: left;
+    margin-top:30px;
+  }
+  .skill-icons img {
+    height: 30px;
+    margin-bottom:15px;
+  }
+  .bigsquare.left {
+    left: -700px;
+    top: -300px;
+  }
+  .red-item__showcase img {
+    /*position: relative;*/
+    height: 300px;
+    top:200px;
+  }
+  .red-item__showcase img:first-child {
+    left: -30vw;
+    opacity: 1;
+    height: 150px;
+  }
+  .red-item__showcase img:nth-child(2) {
+    z-index: 5;
+    height: 200px;;
+  }
+  .red-item__showcase img:last-child {
+    right: -30vw;
+    opacity: 1;
+    height: 150px;
+  }
+
+  #pinContainer{
+    
+  }
+  #slideContainer{
+    left: 0;
+    position: relative;
+    width:100%;
+    display: block;
+    overflow: scroll;
+   
+  }
+  #slideContainer>div{
+    width: 500vw;
+  }
+  .red-left-instructions,.red-left{
+    display: none;
+  }
+  .epic-stuff{
+    position: relative;
+    padding-top: 0;
+    height: auto;
+  }
+  .red-item__left{
+    flex-basis: 100%;
+    flex-shrink: 0;
+    padding: 10px;
+    position: relative;
+    
+  }
+  .red-item{
+    width:100vw;
+    float: left;
+    flex-direction: column;
+  }
+  .red-item__description{
+    font-size: 16px;
+  }
+  .skill-icons.small-icons{
+    display: none;
+  }
+  .red{
+    text-align: center;
+  }
+  .red-item__showcase{
+    display: block;
+  }
+  .profile-pic{
+    margin-bottom: 0;
+  }
+
+    .skills .col-md-4 h3.light{
+    margin-bottom:30px;
+    font-size:24px;
+  }
+  p.large{
+    font-size:16px;
+    margin-top:15px;
+  }
+  #section4.site-block{
+    margin-bottom: 45px;
+  }
+  .caksha{
+    display: none;
+    height: 0;
+  }
+  .red-item__title{
+    font-size: 36px;
+  }
+  .red-item__subtitle{
+    font-size: 18px;
+  }
 }
